# tfm

./: Cargo.toml  LICENSE  README.md
script/: open  preview
src/: action.rs  app.rs  buffer.rs  config.rs  dir.rs  file.rs  main.rs  nav.rs  reg.rs  ui.rs  utils.rs
