[package]
name = "rust-tfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tfm"
path = "src/main.rs"

[dependencies]
crossterm = "0.26"
unicode-width = "0.1"
chrono = "0.4"
crossbeam-channel = "0.5"
walkdir = "2"
users = "0.11"
log = "0.4"
simplelog = "0.12.1"


[profile.dev]
opt-level = 1

# release build configure
[profile.release]
strip = true
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
